<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context="com.example.android.todohome.activities.EditorActivity">

    <TextView
        android:id="@+id/label_task_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="16dp"
        android:text="@string/label_task"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/label_description_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/label_description"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/label_creation_date_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_task_text_view" />

    <TextView
        android:id="@+id/label_creation_date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/label_creation_date"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/label_done_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_description_text_view" />

    <TextView
        android:id="@+id/label_done_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/label_done"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_creation_date_text_view" />

    <EditText
        android:id="@+id/edit_text_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_task_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <EditText
        android:id="@+id/edit_text_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_description_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_creation_date_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <CheckBox
        android:id="@+id/done_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_done_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="label_creation_date_text_view,label_description_text_view,label_task_text_view,label_done_text_view" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_task_button"
        style="@style/floating_action_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done_checkbox" />

</android.support.constraint.ConstraintLayout>
