<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_height"
        android:focusable="false" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:paddingLeft="8dp"
        android:textSize="@dimen/default_text_size" />

</LinearLayout>
