<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_delete_task"
        android:title="@string/delete_single_task"
        app:showAsAction="ifRoom"/>
</menu>